Rename handbook and fix corrupted centralized server duplication

--- a/handbook.ipynb
+++ b/handbook.ipynb
@@ -51,16 +51,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load \"https://raw.githubusercontent.com/maxper4/Tuto-DSN-2025/refs/heads/master/src/system_base.py\""
+    "# %load \"https://raw.githubusercontent.com/maxper4/Tuto-DSN-2025/refs/heads/master/src/system_base.py\"\n",
+    "class SystemBase:\n",
+    "    required_components_names = set([])\n",
+    "    intrinsic_properties = []\n",
+    "\n",
+    "    def __init__(self, name, components):\n",
+    "        if not isinstance(name, str):\n",
+    "            raise TypeError(\"Name should be a string\")\n",
+    "        self.name = name\n",
+    "        if not isinstance(components, dict):\n",
+    "            raise TypeError(\"Components should be a dictionary\")\n",
+    "        if self.required_components_names != components.keys():\n",
+    "            raise ValueError(f\"Components for {self.name} should be: {self.required_components_names}\")\n",
+    "        if not all(isinstance(c, Component) or isinstance(c, SystemBase) for c in components.values()):\n",
+    "            raise TypeError(\"All components should be instances of Component\")\n",
+    "        \n",
+    "        self.components = components\n",
+    "        self.properties = self._merge_properties()\n",
+    "\n",
+    "    def refresh(self):\n",
+    "        self.properties = self._merge_properties()\n",
+    "\n",
+    "    def _merge_properties(self):\n",
+    "        all = list(set([a for _,c in self.components.items() for a in c.properties] + self.intrinsic_properties))\n",
+    "        if \"property 1\" in all and \"property 2\" in all:\n",
+    "            all.remove(\"property 1\")\n",
+    "            all.remove(\"property 2\")\n",
+    "            all.append(\"combination property 1 and 2\")\n",
+    "        if \"untrusted\" in all and self.__class__.__name__ == \"FederatedLearning\":\n",
+    "            all.append(\"unscalable\")\n",
+    "        if \"corrupted\" in all and \"privacy-preserving\" in all:\n",
+    "            all.remove(\"privacy-preserving\")\n",
+    "            all.remove(\"corrupted\")\n",
+    "            all.append(\"privacy-leaking\")\n",
+    "        if \"not cool\" in all and \"cool\" in all:\n",
+    "            all.remove(\"not cool\")\n",
+    "        if \"untrusted\" in all and \"trusted\" in all:\n",
+    "            all.remove(\"trusted\")\n",
+    "        if \"centralized\" in all and \"decentralized\" in all:\n",
+    "            all.remove(\"decentralized\")\n",
+    "        if \"data-available\" in all and \"unavailable\" in all:\n",
+    "            all.remove(\"unavailable\")\n",
+    "            all.remove(\"data-available\")\n",
+    "            all.append(\"available\")\n",
+    "        return all\n",
+    "    \n",
+    "    def display(self):\n",
+    "        print(f\"{self.name}\\nProperties: {', '.join(self.properties)}\")\n",
+    "        print(\"Components:\")\n",
+    "        for n, component in self.components.items():\n",
+    "            print(f\"{n}: {component.info()}\")\n",
+    "        print()\n",
+    "\n",
+    "    def info(self):\n",
+    "        return f\"{self.name} ({', '.join(self.properties)})\"\n",
+    "\n",
+    "class Component():\n",
+    "    def __init__(self, name, properties):\n",
+    "        if not isinstance(name, str):\n",
+    "            raise TypeError(\"Name should be a string\")\n",
+    "        self.name = name\n",
+    "        if not isinstance(properties, list):\n",
+    "            raise TypeError(\"Properties should be a list\")\n",
+    "        if not all(isinstance(attr, str) for attr in properties):\n",
+    "            raise TypeError(\"All properties should be strings\")\n",
+    "        if properties == None:\n",
+    "            raise ValueError(\"Properties cannot be empty\")\n",
+    "        self.properties = properties\n",
+    "\n",
+    "    def info(self):\n",
+    "        return f\"{self.name} ({', '.join(self.properties)})\"\n",
+    "\n",
+    "class ExampleSystem(SystemBase):\n",
+    "    required_components_names = set([\"Component 1\", \"Component 2\"])\n",
+    "    intrinsic_properties = [\"intrinsic property\"]\n",
+    "\n",
+    "class Blockchain(SystemBase):\n",
+    "    required_components_names = set([\"Consensus\", \"Transactions\"]) \n",
+    "    intrinsic_properties = [\"trusted\"]\n",
+    "\n",
+    "class FederatedLearning(SystemBase):\n",
+    "    required_components_names = set([\"Aggregation\", \"Models Storage\"])\n",
+    "    intrinsic_properties = [\"privacy-preserving\"]\n",
+    "\n",
+    "class DistributedStorage(Component):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(\"Distributed Storage\", [\"scalable\", \"unavailable\"])\n",
+    "\n",
+    "class CentralizedServer(Component):\n",
+    "    def __init__(self):\n",
+    "        super().__init__(\"Centralized Server\", [\"untrusted\"])\n",
+    "        \n",
+    "    def corrupt(self):\n",
+    "        self.properties.append(\"corrupted\")\n",
+    "        print(\"Centralized Server has been corrupted! It will now try to mislead the system.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,9 +170,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Example System\n",
+      "Properties: intrinsic property, combination property 1 and 2\n",
+      "Components:\n",
+      "Component 1: Example Name (property 1, property 2)\n",
+      "Component 2: Example Name (property 1, property 2)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "example_component = Component(\"Example Name\", [\"property 1\", \"property 2\"])\n",
     "example_system = ExampleSystem(\"Example System\", {\n",
@@ -111,9 +218,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Centralized Server (untrusted)'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from src.system_base import FederatedLearning, CentralizedServer\n",
     "\n",
@@ -131,13 +249,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Centralized Federated Learning\n",
+      "Properties: untrusted, privacy-preserving, unscalable\n",
+      "Components:\n",
+      "Aggregation: Centralized Server (untrusted)\n",
+      "Models Storage: Centralized Server (untrusted)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "centralized_federated_learning = FederatedLearning(\"Centralized Federated Learning\", {\n",
-    "        \"Aggregation\": empty,\n",
-    "        \"Models Storage\": empty\n",
+    "        \"Aggregation\": centralized_server,\n",
+    "        \"Models Storage\": centralized_server\n",
     "    })\n",
     "centralized_federated_learning.display()"
    ]
@@ -167,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,9 +341,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Centralized Server has been corrupted! It will now try to mislead the system.\n"
+     ]
+    }
+   ],
    "source": [
     "centralized_server.corrupt()"
    ]
@@ -226,9 +365,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Centralized Federated Learning\n",
+      "Properties: untrusted, unscalable, privacy-leaking\n",
+      "Components:\n",
+      "Aggregation: Centralized Server (untrusted, corrupted)\n",
+      "Models Storage: Centralized Server (untrusted, corrupted)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "centralized_federated_learning.refresh()\n",
     "centralized_federated_learning.display() # privacy-leaking -> tampered model"
@@ -257,9 +409,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blockchain Example\n",
+      "Properties: trusted\n",
+      "Components:\n",
+      "Consensus: Empty ()\n",
+      "Transactions: Empty ()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "blockchain = Blockchain(\"Blockchain Example\", {\n",
     "        \"Consensus\": empty,\n",
@@ -347,9 +512,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Distributed Storage (scalable, unavailable)'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "distributed_storage = DistributedStorage()\n",
     "distributed_storage.info()"
@@ -366,9 +542,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "All components should be instances of Component",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m external_storage_fl = \u001b[43mFederatedLearning\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mExternal Storage Federated Learning\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\n\u001b[32m      2\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mAggregation\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mempty\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mModels Storage\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mempty\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m    \u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m external_storage_fl.display()\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/tutoDSN/src/system_base.py:14\u001b[39m, in \u001b[36mSystemBase.__init__\u001b[39m\u001b[34m(self, name, components)\u001b[39m\n\u001b[32m     12\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mComponents for \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.name\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m should be: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m.required_components_names\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     13\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mall\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(c, Component) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(c, SystemBase) \u001b[38;5;28;01mfor\u001b[39;00m c \u001b[38;5;129;01min\u001b[39;00m components.values()):\n\u001b[32m---> \u001b[39m\u001b[32m14\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mAll components should be instances of Component\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     16\u001b[39m \u001b[38;5;28mself\u001b[39m.components = components\n\u001b[32m     17\u001b[39m \u001b[38;5;28mself\u001b[39m.properties = \u001b[38;5;28mself\u001b[39m._merge_properties()\n",
+      "\u001b[31mTypeError\u001b[39m: All components should be instances of Component"
+     ]
+    }
+   ],
    "source": [
     "external_storage_fl = FederatedLearning(\"External Storage Federated Learning\", {\n",
     "        \"Aggregation\": empty,\n",
@@ -386,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,9 +591,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POAI Blockchain\n",
+      "Properties: data-available, trusted\n",
+      "Components:\n",
+      "Consensus: Empty ()\n",
+      "Transactions: POAI (data-available)\n",
+      "\n",
+      "POAI Federated Learning\n",
+      "Properties: privacy-preserving\n",
+      "Components:\n",
+      "Aggregation: Empty ()\n",
+      "Models Storage: Empty ()\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "poai_blockchain = Blockchain(\"POAI Blockchain\", {\n",
     "        \"Consensus\": empty, # leave empty\n",
@@ -442,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
