Fix typo and implementation in sec 3

--- a/handbook.ipynb
+++ b/handbook.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,23 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Models Storage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[54]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m example_component = Component(\u001b[33m\"\u001b[39m\u001b[33mExample Name\u001b[39m\u001b[33m\"\u001b[39m, [\u001b[33m\"\u001b[39m\u001b[33mproperty 1\u001b[39m\u001b[33m\"\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mproperty 2\u001b[39m\u001b[33m\"\u001b[39m])\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m example_system = \u001b[43mExampleSystem\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mExample System\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mComponent 1\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mexample_component\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mComponent 2\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mexample_component\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m example_system.display()\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[52]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36mSystemBase.__init__\u001b[39m\u001b[34m(self, name, components)\u001b[39m\n\u001b[32m     15\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mAll components should be instances of Component\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     17\u001b[39m \u001b[38;5;28mself\u001b[39m.components = components\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m \u001b[38;5;28mself\u001b[39m.properties = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_merge_properties\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[52]\u001b[39m\u001b[32m, line 33\u001b[39m, in \u001b[36mSystemBase._merge_properties\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     31\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33muntrusted\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mall\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m.components[\u001b[33m\"\u001b[39m\u001b[33mAggregation\u001b[39m\u001b[33m\"\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mtrusted\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.components[\u001b[33m\"\u001b[39m\u001b[33mAggregation\u001b[39m\u001b[33m\"\u001b[39m].properties:\n\u001b[32m     32\u001b[39m     \u001b[38;5;28mall\u001b[39m.remove(\u001b[33m\"\u001b[39m\u001b[33muntrusted\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcomponents\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mModels Storage\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mtrusted\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.components[\u001b[33m\"\u001b[39m\u001b[33mModels Storage\u001b[39m\u001b[33m\"\u001b[39m].properties:\n\u001b[32m     34\u001b[39m     \u001b[38;5;28mall\u001b[39m.add(\u001b[33m\"\u001b[39m\u001b[33mheavy-storage\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     35\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mcorrupted\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mall\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mprivacy-preserving\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mall\u001b[39m:\n",
-      "\u001b[31mKeyError\u001b[39m: 'Models Storage'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "example_component = Component(\"Example Name\", [\"property 1\", \"property 2\"])\n",
     "example_system = ExampleSystem(\"Example System\", {\n",
@@ -125,20 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Centralized Server (untrusted)'"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "centralized_server = CentralizedServer()\n",
     "centralized_server.info()"
@@ -154,22 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Centralized Federated Learning\n",
-      "Properties: untrusted, privacy-preserving, unscalable\n",
-      "Components:\n",
-      "Aggregation: Centralized Server (untrusted)\n",
-      "Models Storage: Centralized Server (untrusted)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "centralized_federated_learning = FederatedLearning(\"Centralized Federated Learning\", {\n",
     "        \"Aggregation\": empty,\n",
@@ -203,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,17 +208,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Centralized Server has been corrupted! It will now try to mislead the system.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "centralized_server.corrupt()"
    ]
@@ -270,22 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Centralized Federated Learning\n",
-      "Properties: untrusted, unscalable, privacy-leaking\n",
-      "Components:\n",
-      "Aggregation: Centralized Server (untrusted, corrupted)\n",
-      "Models Storage: Centralized Server (untrusted, corrupted)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "centralized_federated_learning.refresh()\n",
     "centralized_federated_learning.display()"
@@ -314,22 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blockchain Example\n",
-      "Properties: trusted\n",
-      "Components:\n",
-      "Consensus: Empty ()\n",
-      "Transactions: Empty ()\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "blockchain = Blockchain(\"Blockchain Example\", {\n",
     "        \"Consensus\": empty,\n",
@@ -375,23 +303,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'Models Storage'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[56]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m centralized_server = CentralizedServer()\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m blockchain = \u001b[43mBlockchain\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mBlockchain Example\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mConsensus\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mempty\u001b[49m\u001b[43m,\u001b[49m\n\u001b[32m      4\u001b[39m \u001b[43m        \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mTransactions\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mempty\u001b[49m\n\u001b[32m      5\u001b[39m \u001b[43m    \u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m distributed_federated_learning = FederatedLearning(\u001b[33m\"\u001b[39m\u001b[33mDistributed Federated Learning\u001b[39m\u001b[33m\"\u001b[39m, {\n\u001b[32m      7\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mAggregation\u001b[39m\u001b[33m\"\u001b[39m: blockchain,\n\u001b[32m      8\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mModels Storage\u001b[39m\u001b[33m\"\u001b[39m: blockchain\n\u001b[32m      9\u001b[39m     })\n\u001b[32m     10\u001b[39m distributed_federated_learning.display()\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[52]\u001b[39m\u001b[32m, line 18\u001b[39m, in \u001b[36mSystemBase.__init__\u001b[39m\u001b[34m(self, name, components)\u001b[39m\n\u001b[32m     15\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mAll components should be instances of Component\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     17\u001b[39m \u001b[38;5;28mself\u001b[39m.components = components\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m \u001b[38;5;28mself\u001b[39m.properties = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_merge_properties\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[52]\u001b[39m\u001b[32m, line 33\u001b[39m, in \u001b[36mSystemBase._merge_properties\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m     31\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33muntrusted\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mall\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mself\u001b[39m.components[\u001b[33m\"\u001b[39m\u001b[33mAggregation\u001b[39m\u001b[33m\"\u001b[39m] \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mtrusted\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.components[\u001b[33m\"\u001b[39m\u001b[33mAggregation\u001b[39m\u001b[33m\"\u001b[39m].properties:\n\u001b[32m     32\u001b[39m     \u001b[38;5;28mall\u001b[39m.remove(\u001b[33m\"\u001b[39m\u001b[33muntrusted\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m33\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcomponents\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mModels Storage\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mtrusted\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.components[\u001b[33m\"\u001b[39m\u001b[33mModels Storage\u001b[39m\u001b[33m\"\u001b[39m].properties:\n\u001b[32m     34\u001b[39m     \u001b[38;5;28mall\u001b[39m.add(\u001b[33m\"\u001b[39m\u001b[33mheavy-storage\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     35\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mcorrupted\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mall\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m \u001b[33m\"\u001b[39m\u001b[33mprivacy-preserving\u001b[39m\u001b[33m\"\u001b[39m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mall\u001b[39m:\n",
-      "\u001b[31mKeyError\u001b[39m: 'Models Storage'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "centralized_server = CentralizedServer()\n",
     "blockchain = Blockchain(\"Blockchain Example\", {\n",
@@ -409,7 +323,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Implementation\n",
+    "You can now implement a round of the Federated Learning system with a blockchain component, similar to the previous implementation but with the blockchain component replacing the centralized server."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def client_distributed_federated_learning(data, train, add_transaction, read_blockchain):\n",
+    "    \"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validator_distributed_federated_learning(aggregate, read_blockchain, add_transaction):\n",
+    "    \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Limitations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The blockchain is storing a lot of data, which can lead to scalability issues. Also, we can enhance the scalability by not puting all the updates in the blockchain, but only the aggregated model."
    ]
   },
   {
@@ -443,20 +392,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Distributed Storage (scalable, unavailable)'"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "distributed_storage = DistributedStorage()\n",
     "distributed_storage.info()"
@@ -473,22 +411,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "External Storage Federated Learning\n",
-      "Properties: privacy-preserving\n",
-      "Components:\n",
-      "Aggregation: Empty ()\n",
-      "Models Storage: Empty ()\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "external_storage_fl = FederatedLearning(\"External Storage Federated Learning\", {\n",
     "        \"Aggregation\": empty,\n",
@@ -522,28 +447,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POAI Blockchain\n",
-      "Properties: trusted, data-available\n",
-      "Components:\n",
-      "Consensus: Empty ()\n",
-      "Transactions: POAI (data-available)\n",
-      "\n",
-      "POAI Federated Learning\n",
-      "Properties: privacy-preserving\n",
-      "Components:\n",
-      "Aggregation: Empty ()\n",
-      "Models Storage: Empty ()\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "poai_blockchain = Blockchain(\"POAI Blockchain\", {\n",
     "        \"Consensus\": empty, # leave empty\n",
