--- a/handbook.ipynb
+++ b/handbook.ipynb
@@ -170,8 +170,7 @@
    "outputs": [],
    "source": [
     "def client_federated_learning(data, train, send):\n",
-    "    model = train(data)\n",
-    "    send(model)"
+    "    return \"TODO\""
    ]
   },
   {
@@ -188,7 +187,7 @@
    "outputs": [],
    "source": [
     "def server_federated_learning(aggregate, receive, send):\n",
-    "    \"\""
+    "    return \"TODO\""
    ]
   },
   {
@@ -269,7 +268,45 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The consensus algorithm is a key component of blockchain technology. It ensures that all participants in the network agree on the state of the blockchain, preventing malicious actors from tampering with the data.\n",
+    "There is two main types of consensus algorithm: committee-based (~\"Proof of Stake\") and Nakamoto-style (~\"Proof of Work\")."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tendermint = CommitteeConsensus()\n",
+    "cosmos = Blockchain(\"Cosmos Blockchain\", {\n",
+    "        \"Consensus\": tendermint,\n",
+    "        \"Transactions\": empty\n",
+    "    })\n",
+    "cosmos.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pow = NakamotoConsensus()\n",
+    "bitcoin = Blockchain(\"Bitcoin Blockchain\", {\n",
+    "        \"Consensus\": pow,\n",
+    "        \"Transactions\": empty\n",
+    "    })\n",
+    "bitcoin.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The difference between these two types of consensus algorithms lies in how they achieve agreement among participants. Committee-based algorithms rely on a small group of trusted nodes to validate transactions, while Nakamoto-style algorithms relies on the longest (heaviest) chain rule. Because a block agreed by a committee can never be revoked, Committee-based blockchains have immediate finality but because Nakamoto-style blockchains can be reverted, they have only probabilistic finality. We will only consider Committee-based blockchains in this tutorial."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,7 +319,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Let's implement a simple blockchain component that uses a committee-based consensus algorithm. We assume that we have a mechanism to select a leader whose role is to propose a new block. The leader collects transactions from a mempool (a buffer of pending transactions) and creates a new block. The other nodes in the network validate the block and vote on it. If the block is valid, it is added to the blockchain."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def propose_block(wait, mempool, send, votes, enough):\n",
+    "    return \"TODO\"\n",
+    "\n",
+    "def attest_block(block, vote, send, valid):\n",
+    "    return \"TODO\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Limitations\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Blockchain technology is not a panacea. It has its own limitations, such as scalability and energy consumption. It is not suited to store large amounts of data, and it requires a significant amount of computational resources to maintain the network. However, it can be used to enhance the reliability of Federated Learning systems by providing a decentralized and tamper-proof ledger."
    ]
   },
   {
@@ -334,7 +398,7 @@
    "outputs": [],
    "source": [
     "def client_distributed_federated_learning(data, train, add_transaction, read_blockchain):\n",
-    "    \"\""
+    "    return \"TODO\""
    ]
   },
   {
@@ -344,7 +408,7 @@
    "outputs": [],
    "source": [
     "def validator_distributed_federated_learning(aggregate, read_blockchain, add_transaction):\n",
-    "    \"\""
+    "    return \"TODO\""
    ]
   },
   {
